[project]
name = "vla_beam"
version = "0.0.1"
authors = [
  { name="Roger Ianjamasimanana", email="ianja@iaa.es" },
]
description = "Calculates beam response of the VLA"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ianjarog/vla-beam"
"Bug Tracker" = "https://github.com/ianjarog/vla-beam/issues"
